fix choose delivery button on mobile side

--- a/src/BasketWrapper/Basket/Basket.module.css
+++ b/src/BasketWrapper/Basket/Basket.module.css
@@ -281,7 +281,6 @@
         width: 118px;
         font-size: 12px;
         line-height: 13px;
-        vertical-align: sub;
         word-wrap: break-word;
     }
 
